<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory  android:title="@string/pref_user_profile" >
        <CheckBoxPreference
                android:key="autoCheckIn"
                android:title="@string/enable_auto_checkin_title"
                android:summary="@string/enable_auto_checkin_summary"/>

        <ListPreference
                android:key="autoCheckInRadius"
                android:entries="@array/auto_checkin_radius_entries"
                android:summary="@string/auto_checkin_radius_summary"
                android:entryValues="@array/auto_checkin_radius_values"
                android:defaultValue="5"
                android:title="@string/auto_checkin_radius_title" />

    </PreferenceCategory>
</PreferenceScreen>