<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory  android:title="@string/pref_user_profile" >
        <ListPreference
                android:key="detectTime"
                android:entries="@array/detect_time_entries"
                android:summary="@string/detect_time_summary"
                android:entryValues="@array/detect_time_values"
                android:defaultValue="600000"
                android:title="@string/detect_time_title" />

        <ListPreference
            android:key="detectRadius"
            android:entries="@array/detect_radius_entries"
            android:summary="@string/detect_radius_summary"
            android:entryValues="@array/detect_radius_values"
            android:defaultValue="50"
            android:title="@string/detect_radius_title" />

    </PreferenceCategory>
</PreferenceScreen>